@@ -583,6 +583,16 @@ const run = async (): Promise<void> => {
   {
     const outDir = mkTmp();
     const tmp = mkTmp();
+    const noStructurePdf = path.join(tmp, "no_structure.pdf");
+    fs.writeFileSync(noStructurePdf, "%PDF-1.7\nplaceholder text only\n%%EOF\n", "utf8");
+    const res = await runCliCapture(["safe-run", noStructurePdf, "--out", outDir, "--adapter", "document"]);
+    assertEq(res.status, 40, "safe-run should fail closed for explicit document pdf without structural markers");
+    assert(res.stderr.includes("DOC_FORMAT_MISMATCH"), "expected DOC_FORMAT_MISMATCH on stderr for pdf without structural markers");
+  }
+
+  {
+    const outDir = mkTmp();
+    const tmp = mkTmp();
     const badPdf = path.join(tmp, "bad.pdf");
     fs.writeFileSync(badPdf, "not-a-pdf", "utf8");
     const res = await runCliCapture(["safe-run", badPdf, "--out", outDir, "--adapter", "document"]);
